# phaseGP

./: LICENSE  README.md  phaseGP_api_reference.html  pyproject.toml
benchmarks/demos/: biological_condensate_benchmark.ipynb  pruner_tutorial.ipynb  sine_benchmark.ipynb  supramolecular_copolymerization_benchmark.ipynb
benchmarks/demos/ground_truth/: flory_phase.py
benchmarks/demos/ground_truth/surrogate_equilibrium_model/: equilibrium_fracAA0.01_fracAB0.5.pkl  equilibrium_fracAA0.01_fracAB1.pkl  equilibrium_fracAA0.1_fracAB0.5.pkl  equilibrium_fracAA1_fracAB1.pkl
benchmarks/paper_reproducibility/: calculate_error_curves.sh  error_curve_visualizer.ipynb  generate_sup_copolymerization_models.sh  gp_error_curve_reproducer.py  pdc_error_curve_reproducer.py
benchmarks/paper_reproducibility/experimental_data/: experiment_error_curves.pkl
benchmarks/paper_reproducibility/ground_truth/: solvemassbal_binsearch.py  surrogate_equilibrium_model_generator.py  true_phase.py
benchmarks/paper_reproducibility/ground_truth/surrogate_equilibrium_model/: equilibrium_fracAA0.01_fracAB5.pkl  equilibrium_fracAA0.1_fracAB1.pkl  equilibrium_fracAA0.1_fracAB5.pkl  equilibrium_fracAA0.2_fracAB1.pkl
benchmarks/paper_reproducibility/synthetic_error_rate_data/gp/: batch_biological_condensate.pkl  batch_sine.pkl  batch_supramolecular_copolymerization.pkl  biological_condensate.pkl  diagonal_partial_variation.pkl  m_vary.pkl  noisy_sine_in0.00_fl0.025.pkl  noisy_sine_in0.00_fl0.05.pkl  t_vary.pkl  (+4 more)
phaseGP/: __init__.py  models.py  priors.py  source_pruner.py  utils.py  visualization.py
(+37 files in other folders)
