[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phaseGP"
version = "0.2.0"
description = "Phase diagram mapping using Gaussian processes with support for transfer learning"
authors = [{name = "Eduardo Gonzalez Garcia", email = "e.gonzalez.garcia@tue.nl"}]
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.12.0",
    "gpytorch>=1.9.0",
    "botorch>=0.8.0",
    "scikit-learn>=1.1.0",
    "scipy>=1.8.0",
    "gudhi>=3.6.0",
    "matplotlib>=3.5.0"
]
requires-python = ">=3.7"

[tool.setuptools]
packages = ["phaseGP"]
